feat(contato): adicionar validações e ajustes de mapeamento na entidade Contato